--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <h1 class="text-4xl font-bold text-indigo-800 mb-2">Software Engineer Prompt Generator</h1>
             <p class="text-indigo-600">Create prompts for your development tasks based on best industry practices.</p>
         </header>
-        <div class="flex space-x-6">
+        <div id="panels-container" class="flex space-x-6 justify-center">
             <!-- Main Panel -->
-            <div class="w-2/3">
+            <div id="main-panel" class="w-2/3">
                 <div class="bg-white rounded-lg shadow-lg p-8 space-y-8">
                     <div class="input-group">
                         <label class="block text-sm font-medium text-gray-700 mb-3">Task Type:</label>
@@ -43,10 +43,18 @@
                                 <input type="radio" class="form-radio text-indigo-600" name="task" value="optimize">
                                 <span class="ml-2">Optimize</span>
                             </label>
+                            <label class="inline-flex items-center">
+                                <input type="radio" class="form-radio text-indigo-600" name="task" value="learn">
+                                <span class="ml-2">Learn</span>
+                            </label>
                         </div>
                     </div>
-                    <div id="dynamic-fields"></div>
-                    <div id="toggle-options" class="space-y-2"></div>
+                    <div id="dynamic-fields">
+                        <!-- Fields will be dynamically inserted here -->
+                    </div>
+                    <div id="toggle-options" class="space-y-2">
+                        <!-- Toggles will be dynamically inserted here -->
+                    </div>
                     <div class="input-group">
                         <label class="block text-sm font-medium text-gray-700 mb-3">Output Format:</label>
                         <div class="flex flex-col space-y-2">
@@ -70,30 +78,34 @@
             </div>
 
             <!-- Right Panel: Generated Prompt and AI Links -->
-            <div class="w-1/3 space-y-6">
-                <!-- Generated Prompt Section -->
-                <div id="result" class="bg-white rounded-lg shadow-lg p-6 hidden">
+            <div id="right-panel" class="w-1/3 hidden">
+                <div id="result" class="bg-white rounded-lg shadow-lg p-6">
                     <div class="flex justify-between items-center mb-4">
                         <h2 class="text-xl font-semibold text-indigo-800">Generated Prompt:</h2>
-                        <button id="copy-btn" class="bg-indigo-100 text-indigo-700 px-3 py-1 rounded hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 transition duration-150 ease-in-out">
-                            Copy
-                        </button>
+                        <div class="flex space-x-2">
+                            <button id="copy-btn" class="bg-indigo-100 text-indigo-700 px-3 py-1 rounded hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 transition duration-150 ease-in-out">
+                                Copy
+                            </button>
+                            <button id="close-btn" class="bg-red-100 text-red-700 px-3 py-1 rounded hover:bg-red-200 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2 transition duration-150 ease-in-out">
+                                Close
+                            </button>
+                        </div>
                     </div>
-                    <p id="generated-prompt" class="text-gray-700 bg-indigo-50 p-4 rounded-md border border-indigo-100 whitespace-pre-wrap text-sm max-h-96 overflow-y-auto"></p>
-                </div>
-
-                <!-- AI Links Section -->
-                <div class="bg-white rounded-lg shadow-lg p-6 space-y-4">
-                    <h2 class="text-xl font-semibold text-indigo-800 mb-4">Quick AI Links</h2>
-                    <a href="https://claude.ai/new" target="_blank" class="block w-full bg-purple-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 transition duration-150 ease-in-out text-center">
-                        Open Claude AI
-                    </a>
-                    <a href="https://chat.openai.com" target="_blank" class="block w-full bg-green-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 transition duration-150 ease-in-out text-center">
-                        Open ChatGPT
-                    </a>
-                    <a href="https://www.perplexity.ai" target="_blank" class="block w-full bg-blue-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transition duration-150 ease-in-out text-center">
-                        Open Perplexity AI
-                    </a>
+                    <p id="generated-prompt" class="text-gray-700 bg-indigo-50 p-4 rounded-md border border-indigo-100 whitespace-pre-wrap text-sm max-h-96 overflow-y-auto mb-4"></p>
+                    
+                    <!-- Quick AI Links -->
+                    <div class="space-y-4 mt-6">
+                        <h3 class="text-lg font-semibold text-indigo-800">Quick AI Links:</h3>
+                        <a href="https://www.perplexity.ai" target="_blank" class="block w-full bg-blue-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transition duration-150 ease-in-out text-center">
+                            Open Perplexity AI
+                        </a>
+                        <a href="https://claude.ai/new" target="_blank" class="block w-full bg-purple-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 transition duration-150 ease-in-out text-center">
+                            Open Claude AI
+                        </a>
+                        <a href="https://chat.openai.com" target="_blank" class="block w-full bg-green-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 transition duration-150 ease-in-out text-center">
+                            Open ChatGPT
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
