--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </script>
 </head>
 <body class="bg-gradient-to-br from-blue-100 to-indigo-200 min-h-screen font-sans">
-    <div class="container mx-auto p-6 max-w-7xl">
+    <div class="container mx-auto p-6 max-w-3xl">
         <header class="text-center mb-12">
             <h1 class="text-4xl font-bold text-indigo-800 mb-2">Software Engineer Prompt Generator</h1>
             <p class="text-indigo-600">Create prompts for your development tasks based on best industry practices.</p>
@@ -32,11 +32,7 @@
                         <label class="block text-sm font-medium text-gray-700 mb-3">Task Type:</label>
                         <div class="flex space-x-4">
                             <label class="inline-flex items-center">
-                                <input type="radio" class="form-radio text-indigo-600" name="task" value="debug" checked>
-                                <span class="ml-2">Debug</span>
-                            </label>
-                            <label class="inline-flex items-center">
-                                <input type="radio" class="form-radio text-indigo-600" name="task" value="generate-ideas">
+                                <input type="radio" class="form-radio text-indigo-600" name="task" value="generate-ideas" checked>
                                 <span class="ml-2">Generate Ideas</span>
                             </label>
                             <label class="inline-flex items-center">
@@ -46,6 +42,10 @@
                             <label class="inline-flex items-center">
                                 <input type="radio" class="form-radio text-indigo-600" name="task" value="learn">
                                 <span class="ml-2">Learn</span>
+                            </label>
+                            <label class="inline-flex items-center">
+                                <input type="radio" class="form-radio text-indigo-600" name="task" value="debug">
+                                <span class="ml-2">Debug</span>
                             </label>
                         </div>
                     </div>
