--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
                         <label class="block text-sm font-medium text-gray-700 mb-3">Task Type:</label>
                         <div class="flex space-x-4">
                             <label class="inline-flex items-center">
-                                <input type="radio" class="form-radio text-indigo-600" name="task" value="generate-ideas" checked>
+                                <input type="radio" class="form-radio text-indigo-600" name="task" value="general" checked>
+                                <span class="ml-2">General</span>
+                            </label>
+                            <label class="inline-flex items-center">
+                                <input type="radio" class="form-radio text-indigo-600" name="task" value="generate-ideas">
                                 <span class="ml-2">Generate Ideas</span>
                             </label>
                             <label class="inline-flex items-center">
                                 <input type="radio" class="form-radio text-indigo-600" name="task" value="optimize">
                                 <span class="ml-2">Optimize</span>
-                            </label>
-                            <label class="inline-flex items-center">
-                                <input type="radio" class="form-radio text-indigo-600" name="task" value="learn">
-                                <span class="ml-2">Learn</span>
                             </label>
                             <label class="inline-flex items-center">
                                 <input type="radio" class="form-radio text-indigo-600" name="task" value="debug">
@@ -85,15 +85,15 @@
                     <!-- Quick AI Links -->
                     <div class="space-y-4 mt-6">
                         <h3 class="text-lg font-semibold text-indigo-800">Quick AI Links:</h3>
-                        <a href="https://www.perplexity.ai" target="_blank" class="block w-full bg-blue-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transition duration-150 ease-in-out text-center">
-                            Open Perplexity AI
-                        </a>
-                        <a href="https://claude.ai/new" target="_blank" class="block w-full bg-purple-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 transition duration-150 ease-in-out text-center">
-                            Open Claude AI
-                        </a>
-                        <a href="https://chat.openai.com" target="_blank" class="block w-full bg-green-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 transition duration-150 ease-in-out text-center">
-                            Open ChatGPT
-                        </a>
+                        <button id="copy-open-perplexity" class="block w-full bg-blue-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transition duration-150 ease-in-out text-center">
+                            Copy & Open Perplexity AI
+                        </button>
+                        <button id="copy-open-claude" class="block w-full bg-purple-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 transition duration-150 ease-in-out text-center">
+                            Copy & Open Claude AI
+                        </button>
+                        <button id="copy-open-chatgpt" class="block w-full bg-green-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 transition duration-150 ease-in-out text-center">
+                            Copy & Open ChatGPT
+                        </button>
                     </div>
                 </div>
             </div>
