add reset button and footer

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
-<body class="bg-gradient-to-br from-blue-100 to-indigo-200 min-h-screen font-sans">
-    <div class="container mx-auto p-6 max-w-3xl">
+<body class="bg-gradient-to-br from-blue-100 to-indigo-200 min-h-screen font-sans flex flex-col">
+    <div class="container mx-auto p-6 max-w-3xl flex-grow">
         <header class="text-center mb-12">
             <h1 class="text-4xl font-bold text-indigo-800 mb-2">Software Engineer Prompt Generator</h1>
             <p class="text-indigo-600">Create prompts for your development tasks based on best industry practices.</p>
@@ -20,27 +20,32 @@
                 <div class="bg-white rounded-lg shadow-lg p-8 space-y-8">
                     <div class="input-group">
                         <label class="block text-sm font-semibold text-gray-700 mb-3">Task Type:</label>
-                        <div class="flex space-x-4">
-                            <label class="custom-radio">
-                                <input type="radio" class="form-radio" name="task" value="general" checked>
-                                <span class="radio-button"></span>
-                                <span class="radio-label">General</span>
-                            </label>
-                            <label class="custom-radio">
-                                <input type="radio" class="form-radio" name="task" value="generate-ideas">
-                                <span class="radio-button"></span>
-                                <span class="radio-label">Generate Ideas</span>
-                            </label>
-                            <label class="custom-radio">
-                                <input type="radio" class="form-radio" name="task" value="optimize">
-                                <span class="radio-button"></span>
-                                <span class="radio-label">Optimize</span>
-                            </label>
-                            <label class="custom-radio">
-                                <input type="radio" class="form-radio" name="task" value="debug">
-                                <span class="radio-button"></span>
-                                <span class="radio-label">Debug</span>
-                            </label>
+                        <div class="flex justify-between items-center">
+                            <div class="flex space-x-4">
+                                <label class="custom-radio">
+                                    <input type="radio" class="form-radio" name="task" value="general" checked>
+                                    <span class="radio-button"></span>
+                                    <span class="radio-label">General</span>
+                                </label>
+                                <label class="custom-radio">
+                                    <input type="radio" class="form-radio" name="task" value="generate-ideas">
+                                    <span class="radio-button"></span>
+                                    <span class="radio-label">Generate Ideas</span>
+                                </label>
+                                <label class="custom-radio">
+                                    <input type="radio" class="form-radio" name="task" value="optimize">
+                                    <span class="radio-button"></span>
+                                    <span class="radio-label">Optimize</span>
+                                </label>
+                                <label class="custom-radio">
+                                    <input type="radio" class="form-radio" name="task" value="debug">
+                                    <span class="radio-button"></span>
+                                    <span class="radio-label">Debug</span>
+                                </label>
+                            </div>
+                            <button id="reset-btn" class="bg-gray-200 text-gray-700 font-semibold py-2 px-4 rounded-md hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2 transition duration-150 ease-in-out">
+                                Reset
+                            </button>
                         </div>
                     </div>
                     <div id="dynamic-fields">
@@ -107,6 +112,9 @@
             </div>
         </div>
     </div>
+    <footer class="bg-indigo-600 text-white py-4 text-center">
+        <p>Made with love ❤️ in SJ</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
